--- a/style.css
+++ b/style.css
@@ -9,3 +9,8 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+details > :first-child {
+  max-height: 400px;
+  overflow-y: auto;
+}
